added unit test harness. version 0.1 complete

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ verify_ssl = true
 pandas = "*"
 argparse = "*"
 marshmallow = "*"
+mock = "*"
+pytest = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.7"
