--- a/PyFynance/resources/config/config.json
+++ b/PyFynance/resources/config/config.json
@@ -1,5 +1,5 @@
 {
-    "version": 0.3,
+    "version": 0.4,
     "paths": {
         "repoPath": "${repo_base_path}",
         "codePath": "${repo_base_path}${sep}PyFynance",
@@ -7,11 +7,31 @@
         "outputPath": "${repo_base_path}${sep}output",
         "logsPath": "${repo_base_path}${sep}logs",
         "resourcesPath": "${repo_base_path}${sep}PyFynance${sep}resources",
-        "dbPath": "${repo_base_path}${sep}PyFynance${sep}resources${sep}db"
+        "dbPath": "${repo_base_path}${sep}PyFynance${sep}resources${sep}databases"
     },
     "ofxParser": {
         "objectTypes": ["banking_transactions"],
         "castFields": ["dtposted", "trnamt"],
         "htmlTags": ["br"]
+    },
+    "database": {
+        "dbNames": ["transactions"],
+        "tables": {
+            "transactions": ["transactions"],
+            "rules": ["base_rules, custom_rules"]
+        },
+        "columnSpecs": {
+            "transactions": {
+                "institution": "text",
+                "account": "text",
+                "transaction_id": "integer",
+                "amount": "decimal",
+                "narrative": "text",
+                "date_posted": "text"
+            }
+        },
+        "primaryKeys": {
+            "transactions": ["institution", "account", "transaction_id"]
+        }
     }
 }
