--- a/PyFynance/resources/config/config.json
+++ b/PyFynance/resources/config/config.json
@@ -1,5 +1,5 @@
 {
-    "version": 0.4,
+    "version": 1.0,
     "paths": {
         "repoPath": "${repo_base_path}",
         "codePath": "${repo_base_path}${sep}PyFynance",
@@ -7,7 +7,8 @@
         "outputPath": "${repo_base_path}${sep}output",
         "logsPath": "${repo_base_path}${sep}logs",
         "resourcesPath": "${repo_base_path}${sep}PyFynance${sep}resources",
-        "dbPath": "${repo_base_path}${sep}PyFynance${sep}resources${sep}databases"
+        "dbPath": "${repo_base_path}${sep}PyFynance${sep}resources${sep}databases",
+        "testPath": "${repo_base_path}${sep}test"
     },
     "ofxParser": {
         "objectTypes": ["banking_transactions"],
