unit tests back to 100% coverage

--- a/PyFynance/resources/config/config.json
+++ b/PyFynance/resources/config/config.json
@@ -29,7 +29,8 @@
                 "tran_type": "text",
                 "amount": "decimal",
                 "narrative": "text",
-                "date_posted": "text"
+                "date_posted": "text",
+                "date_ingested": "text"
             }
         },
         "primaryKeys": {
