--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ rtcat-sphinx-theme = "*"
 sphinx-test-reports = "*"
 black = "==19.3b0"
 pre-commit = "*"
+pyfynance = {path = "./PyFynance",editable = true}
 
 [requires]
 python_version = "3.7"
