--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ sphinx-test-reports = "*"
 black = "==19.3b0"
 pre-commit = "*"
 pyfynance = {path = "./PyFynance",editable = true}
+pytest-cov = "*"
 
 [requires]
 python_version = "3.7"
