finally have a behave test working

--- a/PyFynance/resources/config/config.json
+++ b/PyFynance/resources/config/config.json
@@ -30,7 +30,7 @@
                 "amount": "decimal",
                 "narrative": "text",
                 "date_posted": "text",
-                "date_ingested": "text"
+                "date_processed": "text"
             }
         },
         "primaryKeys": {
