--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 !/input/banking_transactions/.gitkeep
 /input/banking_transactions/processed/*
 !/input/banking_transactions/processed/.gitkeep
+/input/banking_transactions/landing/*
+!/input/banking_transactions/landing/.gitkeep
+/input/banking_transactions/error/*
+!/input/banking_transactions/error/.gitkeep
 
 /output/*
 !/output/.gitkeep
@@ -15,9 +19,6 @@
 
 /PyFynance/resources/databases/current/*
 !/PyFynance/resources/databases/current/.gitkeep
-
-**.ofx
-**.qfx
 
 # Ignoring log folder
 /logs/*
