added remaining behave tests for V1.0

--- a/PyFynance/resources/config/config.json
+++ b/PyFynance/resources/config/config.json
@@ -12,7 +12,7 @@
     },
     "ofxParser": {
         "objectTypes": ["banking_transactions"],
-        "castFields": ["dtposted", "trnamt"],
+        "castFields": ["dtposted", "dtuser", "trnamt"],
         "htmlTags": ["br"]
     },
     "database": {
