added new rules to rules_db

--- a/PyFynance/resources/config/config.json
+++ b/PyFynance/resources/config/config.json
@@ -43,6 +43,7 @@
                 "type": "text",
                 "operation": "text",
                 "value": "text",
+                "description": "text",
                 "confidence": "integer",
                 "category_id": "text"
             },
@@ -51,6 +52,7 @@
                 "type": "text",
                 "operation": "text",
                 "value": "text",
+                "description": "text",
                 "confidence": "integer",
                 "category_id": "text"
             },
@@ -75,8 +77,8 @@
         "columns": {
             "transactions": ["institution", "account", "tran_id", "tran_type", "amount", "narrative", "date_posted",
                 "date_processed", "primary_rule_id", "supp_rule_ids"],
-            "base_rules": ["id", "type", "operation", "value", "confidence", "category_id"],
-            "custom_rules": ["id", "type", "operation", "value", "confidence", "category_id"],
+            "base_rules": ["id", "type", "operation", "value", "description", "confidence", "category_id"],
+            "custom_rules": ["id", "type", "operation", "value", "description", "confidence", "category_id"],
             "base_rule_categories": ["id", "primary_category", "secondary_category"],
             "custom_rule_categories": ["id", "primary_category", "secondary_category"]
         }
